@@ -8,6 +8,9 @@ Sun Feb  8 21:39:06 2009  Akinori MUSHA  <knu@iDaemons.org>
 	  does not exist. [ruby-dev:27630] (r9500)
 	  (:ssl_verify_mode): new option suggested by Will Glynn. (r9958)
 	  (:ssl_ca_cert): new option. (r9958, r13691)
+	  (:ftp_active_mode) new option. (r13307)
+	  (URI::FTP.buffer_open) turn ftp passive mode on if
+	  :ftp_active_mode => false is given.
 
 Mon Feb  9 01:21:16 2009  Tanaka Akira  <akr@fsij.org>
 
